--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,23 @@
 *
 {
   border:2px solid black;
+  font-family: "Playfair Display", serif;
 }
 
-.App {
-  text-align: center;
+.Header
+{
+  display: grid;
+  grid-template-areas: 
+    "nav nav nav"
+    "emp emp emp"
+    "head head emp"
+    "emp emp promo1"
+    "emp emp promo2";
+  grid-template-columns: 1fr 1fr 1fr; /* Define column sizes */
+  grid-template-rows: auto auto auto auto auto; /* Define row sizes */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Nav *
+{
+  padding:0.5rem;
 }
