--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 * {
-  border: 1px solid black;
-  margin: 1px;
   font-family: "Playfair Display", serif;
+}
+
+button:active {
+  transform: scale(0.9, 0.9);
 }
 
 /* In your CSS file */
