--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,7 @@ button:active {
   grid-template-rows: 1fr 1fr auto auto auto; /* Define row sizes */
   grid-template-areas:
     "nav nav nav"
-    ". . ."
-    "head head side"
-    ". . promo1"
-    ". . promo2";
+    "head head side";
 }
 
 .fh {
